# podslurp

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
podslurp/: __init__.py  __main__.py  api.py  config.py  downloader.py  output.py  transcriber.py
